--- a/Views/Admin/Vk.cshtml
+++ b/Views/Admin/Vk.cshtml
@@ -1,30 +1,19 @@
 ﻿@model Vk
 
 <div class="row">
-  <h1 class="text-center">@ViewData["Title"]</h1>
+    <h4 class="text-center">@ViewData["Title"]</h4>
 </div>
 
-<div class="container p-0">
-  <div class="row">
+<div class="row">
     <div class="col-sm-12">
-      @*   <form action="@Url.ActionLink("Vk","Admin")" method="post">
-        <input class="form-control" type="submit" value="ага" />
-        </form>*@
+        <div id="vk">
+            @using (Html.BeginForm("Vk", "Admin", FormMethod.Post))
+            {
+                @Html.TextBoxFor(m => m.Code, htmlAttributes: new {style="display:block; width:100%" })
+                @Html.TextBoxFor(m => m.Access_token, htmlAttributes: new {style="display:block; width:100%" })
+                @Html.TextBoxFor(m => m._redirect_uri, htmlAttributes: new {style="display:block; width:100%" })
+                <input type="submit" value="сохранить" />
+            }
+        </div>
     </div>
-  </div>
-
-
-  <div class="row">
-    <div class="col-sm-12">
-      <div id="content">
-        @Model.WallJson
-      </div>
-    </div>
-  </div>
-
 </div>
-
-@*<script>
-  var form = document.getElementById("form");
-  formToAjax(form, (response)=>{document.getElementById('content').innerHTML = response.Html;}, true);
-</script>*@
