--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -314,12 +314,12 @@ body.busy .loading-cover {
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
+    background-size: 150px;
     position: fixed;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
-    backdrop-filter: blur(10px);
 }
 
 
@@ -619,25 +619,22 @@ ul {
         color: transparent;
     }
 
-    .loader i {
+    .loader > i {
         animation-play-state: paused;
         animation-duration: 1.5s;
         animation-name: loader;
         animation-iteration-count: infinite;
         animation-direction: normal;
         animation-timing-function: linear;
-        animation-play-state: running;
         pointer-events: none;
         transition: 250ms;
         opacity: 0;
         position: absolute;
-        top: 50%;
-        margin-top: -0.5em;
         width: fit-content;
         user-select: none;
     }
 
-    .loader .btn + i {
+    /* .loader .btn + i {
         right: .2em;
         width: fit-content;
     }
@@ -648,11 +645,16 @@ ul {
         margin: auto;
         width: fit-content;
         width: 100%;
+    }*/
+
+    .loader.loading i {
+        opacity: 1;
+        animation-play-state: running;
     }
 
-    .loader.active i {
-        opacity: 1 !important;
-        animation-play-state: running;
+
+    .loader.loading > *:not(.fa-spinner) {
+        opacity: 0;
     }
 
 .form-wrapper {
@@ -736,10 +738,6 @@ ul {
     left: 0;
     right: 0;
     z-index: 3;
-}
-
-.top-bar {
-    position: fixed;
 }
 
 /*  .top-bar.fade {
