--- a/Views/Home/RefundPolicy.cshtml
+++ b/Views/Home/RefundPolicy.cshtml
@@ -1,33 +1,35 @@
 ﻿<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center">@ViewData["Title"]</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center">@ViewData["Title"]</h1>
+        </div>
     </div>
-  </div>
-  <div class="row text-content">
-    <div class="col-xl-12 mx-auto">
-      <h4 class="text-center">ВОЗВРАТ</h4>
-      <p>
-        Вы можете отказаться от заказанного товара в любое время до его получения, в момент передачи товара курьером, а также после получения — в течение 7 календарных дней.
-        <br />
-        Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид и потребительские свойства. При возврате товара надлежащего качества мы вернем его стоимость не позднее чем через 10 дней с момента получения товара и вашего письменного заявления, однако в пределах указанного срока мы вправе провести экспертизу товара с целью определения его качества и сохранности потребительских свойств. Сроки зачисления денежных средств на расчетный счет получателя зависят от внутреннего регламента банка-получателя.
-        <br />
-        Для того чтобы вернуть товар необходимо:
-        <br />
-        Связаться с нами по телефону +7 (999) 003-10-00 или электронной почте info@yakutsa.ru, заполнить заявление на возврат. Приложить копию паспорта, чек и отправить заказ и документы нам по адресу, который сообщит менеджер магазина. Доставка оплачивается за счет клиента.
-        <br />
-        Для возврата товара также необходим документ, удостоверяющий личность.
-      </p>
-    </div>
+    <div class="row text-content">
+        <div class="col-xl-12 mx-auto">
+            <h4 class="text-center">ВОЗВРАТ</h4>
+            <p>
+                Вы можете отказаться от заказанного товара в любое время до его получения, в момент передачи товара курьером, а также после получения — в течение 7 календарных дней.
+                <br />
+                Возврат товара надлежащего качества возможен в случае, если сохранены его товарный вид и потребительские свойства. При возврате товара надлежащего качества мы вернем его стоимость не позднее чем через 10 дней с момента получения товара и вашего письменного заявления, однако в пределах указанного срока мы вправе провести экспертизу товара с целью определения его качества и сохранности потребительских свойств. Сроки зачисления денежных средств на расчетный счет получателя зависят от внутреннего регламента банка-получателя.
+                <br />
+                Для того чтобы вернуть товар необходимо:
+                <br />
+                В течении 14 дней с момента покупки отправить изделие почтой России по адресу: 115419, РОССИЯ, г. Москва, Проезд Рощинский 2-й, д. 8, квартира/офис Э/ПОМ 12/XVII, получатель ООО «Якутса». После получения нами товара возврат денежных средств будет произведен в течении 5 рабочих дней.
+                @*Связаться с нами по телефону +7 (999) 003-10-00 или электронной почте info@yakutsa.ru, заполнить заявление на возврат. Приложить копию паспорта, чек и отправить заказ и документы нам по адресу, который сообщит менеджер магазина. Доставка оплачивается за счет клиента.*@
+                <br />
+                Для возврата товара также необходим документ, удостоверяющий личность.
+            </p>
 
-    <div class="col-xl-12 mx-auto">
-      <hr />
-      <h4 class="text-center">ОБМЕН</h4>
-      <p>
-        Для осуществления обмена необходимо предварительно связаться с нами по номеру +7 (999) 003-10-00, чтобы назначить встречу и убедиться в наличии необходимого размера. Для заказов оформленных из других городов вам нужно заказать на нашем сайте новый товар и оформить возврат не подошедшего.
-      </p>
+        </div>
+
+        <div class="col-xl-12 mx-auto">
+            <hr />
+            <h4 class="text-center">ОБМЕН</h4>
+            <p>
+                Для осуществления обмена необходимо предварительно связаться с нами по номеру +7 (999) 003-10-00, чтобы назначить встречу и убедиться в наличии необходимого размера. Для заказов оформленных из других городов вам нужно заказать на нашем сайте новый товар и оформить возврат не подошедшего.
+            </p>
+        </div>
     </div>
-  </div>
 </div>
 
 
