--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -150,7 +150,7 @@
                             </h5>
                             <div id="footer-flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="footer-flush-headingTwo" data-bs-parent="#footer_accordion">
                                 <p style="padding-left:2rem;">
-                                    ООО "ЯКУТСА"
+                                    ООО «Якутса»
                                     <br />
                                     Номер счета: 40702810902860010663
                                     <br />
@@ -160,7 +160,7 @@
                                     <br />
                                     КПП: 772501001
                                     <br />
-                                    Юридический адрес: 115419, РОССИЯ, г. Москва, Проезд Рощинский 2-й, д. Д. 8, квартира/офис Э/ПОМ 12/XVII
+                                    Юридический адрес: 115419, РОССИЯ, г. Москва, Проезд Рощинский 2-й, д. 8, квартира/офис Э/ПОМ 12/XVII
                                     <br />
                                     Телефон: +7 999 003 1000
                                     <br />
