--- a/Views/Admin/Vk.cshtml
+++ b/Views/Admin/Vk.cshtml
@@ -5,15 +5,9 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
-        <div id="vk">
-            @using (Html.BeginForm("Vk", "Admin", FormMethod.Post))
-            {
-                @Html.TextBoxFor(m => m.Code, htmlAttributes: new {style="display:block; width:100%" })
-                @Html.TextBoxFor(m => m.Access_token, htmlAttributes: new {style="display:block; width:100%" })
-                @Html.TextBoxFor(m => m._redirect_uri, htmlAttributes: new {style="display:block; width:100%" })
-                <input type="submit" value="сохранить" />
-            }
-        </div>
+    <div class="col-sm-10 mx-auto">
+        @{
+            Html.RenderPartial("/Views/Partials/FormPartial.cshtml", (object)Model);
+        }
     </div>
 </div>
