--- a/Views/Admin/Vk.cshtml
+++ b/Views/Admin/Vk.cshtml
@@ -11,3 +11,8 @@
         }
     </div>
 </div>
+<div class="row">
+    <div class="col-sm-10 mx-auto">
+        <input type="button" value="AsyncDebug" onclick="PromiseTest()" />
+    </div>
+</div>
