--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -230,7 +230,7 @@
     <script src="~/js/suggestion.js" type="text/javascript"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
     <script src="~/lib/labelholder/labelholder.js" type="text/javascript"></script>
-    <script src="~/lib/vibrate/vibrate.js" type="text/javascript" asp-append-version="true"></script>
+
     <script src="~/js/site.js" type="text/javascript" asp-append-version="true"></script>
 
     <script type="text/javascript" language="javascript">
@@ -258,15 +258,15 @@
                         setTimeout(()=> { document.body.classList.remove('busy');}, 200);
                }
                });
-                 (function ($) {Initialize($);})(jQuery);
-                var _rcct = "6c4caa7779756413431bb9c176386908bc2a161066fed02b9c17e42ba5c0d1c4";
-        !function (t) {
-            var a = t.getElementsByTagName("head")[0];
-            var c = t.createElement("script");
-            c.type = "text/javascript";
-            c.src = "//c.retailcrm.tech/widget/loader.js";
-            a.appendChild(c);
-        } (document);
+        //         (function ($) {Initialize($);})(jQuery);
+        //        var _rcct = "6c4caa7779756413431bb9c176386908bc2a161066fed02b9c17e42ba5c0d1c4";
+        //!function (t) {
+        //    var a = t.getElementsByTagName("head")[0];
+        //    var c = t.createElement("script");
+        //    c.type = "text/javascript";
+        //    c.src = "//c.retailcrm.tech/widget/loader.js";
+        //    a.appendChild(c);
+        //} (document);
 
     </script>
 
