--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -22,7 +22,6 @@
                     </li>
                 </ul>
                 <div class="tab-content">
-                  
                 </div>
             </div>
         </div>
@@ -35,7 +34,14 @@
         var $tabContent = $tabPanel.find('.tab-content');
         var $navTabs = $tabPanel.find('.nav-tabs');
         let $navItems = $navTabs.find('.nav-item');
+
+        var controller = new AbortController();
+        var request = null;
         $navItems.on('click', (evt) => {
+            if(request != undefined){
+                controller.abort();
+                controller = new AbortController();
+            }
             let $this = $(evt.currentTarget);
             let $navLink = $this.find('.nav-link[data-link]');
             let $tabePanes = $tabContent.find('.tab-pane');
@@ -46,14 +52,20 @@
                 if($tabPane.length == 0){
                     $tabPane = $('<div class="tab-pane loader loading fade" id="ajax" role="tabpanel" ></div>');
                     $tabContent.append($tabPane);
-                }
-                $tabPane.addClass('loading');
-                $.get($navLink.attr('data-link'), (response)=>{
-                    $tabPane.removeClass('loading');
-                    $tabPane.html(response);
                     $tabPane.loader();
-                });
+                }
+
+
+
+                request = fetch($navLink.attr('data-link'),{ signal: controller.signal });
+                request.then(result => result.text())
+                .then(response => {
+                        $tabPane.removeClass('loading');
+                        $tabPane.html(response);
+                })
+                .catch(reject => { console.log(reject); });
             }
+
             $this.addClass('active').find('.nav-link').addClass('active');
             $tabContent.find(`#${$this.find('.nav-link').attr('aria-controls')}`).addClass('show').addClass('active');
         });
