--- a/Views/Admin/Vk.cshtml
+++ b/Views/Admin/Vk.cshtml
@@ -16,3 +16,10 @@
         <input type="button" value="AsyncDebug" onclick="PromiseTest()" />
     </div>
 </div>
+
+<script type="text/javascript">
+    (()=>{
+
+
+    })();
+</script>
