--- a/Views/Internal/Layout.cshtml
+++ b/Views/Internal/Layout.cshtml
@@ -26,7 +26,7 @@
     <link rel="icon" type="image/svg" href="/favicon.svg">
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" asp-append-version="true">
     <link rel="stylesheet" href="~/lib/fancybox/jquery.fancybox.css" asp-append-version="true">
-    <link rel="stylesheet" href="~/css/suggestion.css" />
+    <link rel="stylesheet" href="~/css/suggestion.css" asp-append-version="true"/>
     <link rel="stylesheet" href="~/lib/toolkit.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/lib/labelholder/labelholder.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/chat.css" asp-append-version="true" />
@@ -227,7 +227,7 @@
     <script src="/lib/popper/popper.min.js" type="text/javascript"></script>
     <script src="/lib/fancybox/jquery.fancybox.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/js/labelholder.js" type="text/javascript"></script>
-    <script src="~/js/suggestion.js" type="text/javascript"></script>
+    <script src="~/js/suggestion.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
     <script src="~/lib/labelholder/labelholder.js" type="text/javascript"></script>
 
@@ -258,7 +258,7 @@
                         setTimeout(()=> { document.body.classList.remove('busy');}, 200);
                }
                });
-        //         (function ($) {Initialize($);})(jQuery);
+                 (function ($) {Initialize($);})(jQuery);
         //        var _rcct = "6c4caa7779756413431bb9c176386908bc2a161066fed02b9c17e42ba5c0d1c4";
         //!function (t) {
         //    var a = t.getElementsByTagName("head")[0];
