--- a/Views/Partials/MainMenuPartial.cshtml
+++ b/Views/Partials/MainMenuPartial.cshtml
@@ -15,7 +15,7 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      каталог
+                      КАТАЛОГ
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
@@ -29,22 +29,22 @@
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <a class="accordion-href" href="@Url.ActionLink("DeliveryRules","Home")">доставка</a>
+                    <a class="accordion-href" href="@Url.ActionLink("DeliveryRules","Home")">ДОСТАВКА</a>
                   </h2>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <a class="accordion-href" href="@Url.ActionLink("Care","Home")">Уход</a>
+                    <a class="accordion-href" href="@Url.ActionLink("Care","Home")">УХОД</a>
                   </h2>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <a class="accordion-href" href="@Url.ActionLink("PaymentRules", "Home")">оплата</a>
+                    <a class="accordion-href" href="@Url.ActionLink("PaymentRules", "Home")">ОПЛАТА</a>
                   </h2>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
-                    <a class="accordion-href" href="@Url.ActionLink("Contacts", "Home")">реквизиты</a>
+                    <a class="accordion-href" href="@Url.ActionLink("Contacts", "Home")">РЕКВИЗИТЫ</a>
                   </h2>
                 </div>
               </div>
