--- a/Views/Partials/MainMenuPartial.cshtml
+++ b/Views/Partials/MainMenuPartial.cshtml
@@ -42,11 +42,11 @@
                     <a class="accordion-href" href="@Url.ActionLink("PaymentRules", "Home")">ОПЛАТА</a>
                   </h2>
                 </div>
-                <div class="accordion-item">
+               @* <div class="accordion-item">
                   <h2 class="accordion-header">
                     <a class="accordion-href" href="@Url.ActionLink("Contacts", "Home")">РЕКВИЗИТЫ</a>
                   </h2>
-                </div>
+                </div>*@
               </div>
               <div class="col-10 col-sm-3">
               </div>
