--- a/Views/Store/Category.cshtml
+++ b/Views/Store/Category.cshtml
@@ -1,38 +1,38 @@
 ﻿@model List<Product>
 
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center mb-0" style="color:var(--main-text-color-hover)">@ViewBag.Category?.name</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center mb-0" style="color:var(--main-text-color-hover)">@ViewBag.Category?.name</h1>
+        </div>
     </div>
-  </div>
-  <div class="row mx-0">
+    <div class="row mx-0">
 
-    <div class="mb-2 mr-auto goback-wrapper">
-      <a href="@Url.ActionLink("Index", "Home")">
-        <i class="fas fa-arrow-left md ms-0 ms-md-5 nohover" style="opacity:1;color:var(--main-text-color-hover)"></i>
-        <span class="" style="display: inline-block;color:var(--main-text-color-hover)">главная</span>
-      </a>
+        <div class="mb-2 mr-auto goback-wrapper">
+            <a href="@Url.ActionLink("Index", "Home")">
+                <i class="fas fa-arrow-left md ms-0 ms-md-5 nohover" style="opacity:1;color:var(--main-text-color-hover)"></i>
+                <span class="" style="display: inline-block;color:var(--main-text-color-hover)">ГЛАВНАЯ</span>
+            </a>
+        </div>
     </div>
-  </div>
 
-  <div class="row mx-0 row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-1 g-sm-2 justify-content-center">
-    @foreach (Product p in Model!)
-    {
-      <div class="col">
-        <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
-          <div class="card">
-            <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" style="object-fit: contain;" height="500" class="card-img" alt="@p.name">
-            <div class="card-body">
-              <h5 class="card-title text-center">@p.name</h5>
-              <p class="card-text fa-sm text-end">
-                @p.maxPrice <i class="fa fa-rub nohover"></i>
-              </p>
+    <div class="row mx-0 row-cols-2 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-1 g-sm-2 justify-content-center">
+        @foreach (Product p in Model!)
+        {
+            <div class="col">
+                <a href="@Url.ActionLink(p.name.ToLower(), p.groups?.FirstOrDefault()?.name?.ToLower())" class="nohover">
+                    <div class="card">
+                        <img src="@p.images?.FirstOrDefault(i => i.Side == ImageSide.front && i.Size == ImageSize.m)?.Url" style="object-fit: contain;" height="500" class="card-img" alt="@p.name">
+                        <div class="card-body">
+                            <h5 class="card-title text-center">@p.name</h5>
+                            <p class="card-text fa-sm text-end">
+                                @p.maxPrice <i class="fa fa-rub nohover"></i>
+                            </p>
+                        </div>
+                    </div>
+                </a>
             </div>
-          </div>
-        </a>
-      </div>
-    }
-  </div>
+        }
+    </div>
 </div>
 
