--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -52,6 +52,42 @@
     --main-text-color-hover: white;
 }
 
+
+@keyframes btn-animation {
+    from {
+        background-position: 0 0, 8px 100%, 0 8px, 100% 0;
+    }
+
+    to {
+        background-position: 8px 0, 0 100%, 0 0, 100% 8px;
+    }
+   /* 0% {
+        right: 0;
+    }
+
+    25% {
+        left: 100%;
+    }
+
+    50% {
+        width: 3px;
+    }
+
+    75% {
+        height: 100%;
+    }
+
+    100% {
+    }*/
+}
+
+@-moz-keyframes btn-animation {
+}
+
+@-webkit-keyframes btn-animation {
+}
+
+
 @keyframes loader {
     from {
         transform: rotate(0deg);
@@ -329,6 +365,11 @@ body.busy .loading-cover {
     left: 0;
 }
 
+.model-wrapper.loading canvas {
+    background-image: url(../img/circle_loader.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 /*body.mobile.busy .loading-cover {
     background-size: 10em;
@@ -1130,6 +1171,34 @@ ul li {
         background-color: var(--main-bg-color);
     }
 
+
+.btn-group .btn-anim {
+    margin: 0 5px;
+}
+
+
+    .btn-group .btn-anim {
+       /* animation-name: btn-animation;
+        animation-delay: 0;
+        animation-direction: normal;
+        animation-fill-mode: forwards;
+        animation-play-state: running;
+        animation-iteration-count: infinite;
+        animation-duration: 4s;*/
+        background-image: linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(90deg, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%), linear-gradient(0, white 50%, transparent 50%);
+        background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+        background-size: 8px 3px, 8px 3px, 3px 8px, 3px 8px;
+        animation: btn-animation 0.5s linear infinite;
+    }
+
+.btn-anim:not(.disabled):hover:after, .btn-anim.active:not(.disabled):after {
+    animation-play-state: running;
+}
+
+.btn-group .btn-anim .btn {
+    padding: 0.5em 1em;
+}
+
 .top-bar .fa-shopping-cart {
     position: relative;
 }
@@ -1174,7 +1243,7 @@ ul li {
 
 
 .sizes .btn-group {
-    justify-content: start;
+    justify-content: center;
 }
 
 
